[tool.poetry]
name = "service-convertor"
version = "0.1.0"
description = ""
authors = ["Alex <alxjy@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
motor = "^3.5.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
